fixed undo animation and double-tap zoom on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
 
     overflow: hidden; /* prevent scrollbar from appearing when things go over the bounds */
+    touch-action: manipulation; /* prevent double-tap zoom */
 }
 
 #cover {
